--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,7 @@
       "error",
       {
         "singleQuote": true,
-        "semi": true,
+        "semi": false,
         "bracketSpacing": true,
         "tabWidth": 2,
         "useTabs": false,
@@ -55,7 +55,7 @@
         "ignoreDeclarationSort": true
       }
     ],
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "warn",
     "tailwindcss/no-custom-classname": "off"
   }
 }
