--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,6 @@
   "files.autoSave": "afterDelay",
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "i18next.i18nPaths": "/Users/vadxq/git/nextjs-web3-starter/i18n,/Users/vadxq/git/nextjs-web3-starter/i18n/locales"
+  "i18next.i18nPaths": "/Users/vadxq/git/nextjs-web3-starter/i18n,/Users/vadxq/git/nextjs-web3-starter/i18n/locales",
+  "prettier.semi": true
 }
