--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
     "@ducanh2912/next-pwa": "^9.7.2",
     "@formatjs/intl-localematcher": "^0.2.32",
     "@prisma/client": "^5.4.2",
+    "antd": "^5.14.1",
     "ethers": "^6.8.0",
     "negotiator": "^0.6.3",
     "next": "^13.5.6",
@@ -32,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "server-only": "^0.0.1",
+    "swr": "^2.2.4",
     "tailwind-variants": "^0.1.14",
     "typescript": "^5.2.2"
   },
