--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbo -p ${PORT:-3000}",
     "build": "next build",
     "start": "next start",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
