--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo -p ${PORT:-3000}",
+    "dev": "next dev --turbo -p 3001",
     "build": "next build",
     "start": "next start",
     "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
@@ -37,7 +37,8 @@
     "server-only": "^0.0.1",
     "swr": "^2.2.4",
     "tailwind-variants": "^0.1.14",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "use-socket.io-hooks": "^1.3.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.8.1",
