--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "server-only": "^0.0.1",
+    "socket.io-client": "^4.7.4",
     "swr": "^2.2.4",
     "tailwind-variants": "^0.1.14",
     "typescript": "^5.2.2",
