feat: update chat component logic, and store chat messages

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,5 @@
 DATABASE_URL = "mysql://root:123456@localhost:3306/demo"
 BACKEND_URL = "http://localhost:3000"
 PORT = 8000
+API_URL=https://api.openai-proxy.com/v1/chat/completions
+API_KEY=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
