--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "antd": "^5.14.1",
     "cross-env": "^7.0.3",
     "ethers": "^6.8.0",
+    "markdown-it": "^14.0.0",
     "negotiator": "^0.6.3",
     "next": "^13.5.6",
     "nprogress": "^0.2.0",
@@ -50,6 +51,7 @@
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.8.7",
     "@types/nprogress": "^0.2.2",
     "@types/react": "^18.2.31",
