--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 # 这是环境变量，你可以使用.env.local作为你自己的本地变量，该文件不会被提交。env.development作为开发环境，会被提交。env.production为生产环境
 
 DATABASE_URL = "mysql://root:123456@localhost:3306/demo"
-BACKEND_URL = "http://localhost:3000"
+NEXT_PUBLIC_BACKEND_URL = "http://localhost:3000"
 PORT = 8000
-NEXT_PUBLIC_API_URL = https://api.openai-proxy.com/v1/chat/completions
-NEXT_PUBLIC_API_KEY = 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
+NEXT_PUBLIC_API_URL = "https://proxy.tingper.website/proxy/https://api.openai.com/v1/chat/completions"
+NEXT_PUBLIC_API_KEY = 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
