--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "antd": "^5.14.1",
     "cross-env": "^7.0.3",
     "ethers": "^6.8.0",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "markdown-it": "^14.0.0",
     "negotiator": "^0.6.3",
     "next": "^13.5.6",
