--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,5 @@ DATABASE_URL = "mysql://root:123456@localhost:3306/demo"
 NEXT_PUBLIC_BACKEND_URL = "http://localhost:3000"
 PORT = 8000
 NEXT_PUBLIC_API_URL = "https://proxy.tingper.website/proxy/https://api.openai.com/v1/chat/completions"
-NEXT_PUBLIC_API_KEY = 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
+NEXT_PUBLIC_API_KEY = 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
+#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
