fix: change env

--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,5 @@ PORT = 8000
 NEXT_PUBLIC_API_URL = "https://proxy.tingper.website/proxy/https://api.openai.com/v1/chat/completions"
 NEXT_PUBLIC_API_KEY = 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
 #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
+
+# Path: .env.production
