--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "negotiator": "^0.6.3",
     "next": "^13.5.6",
     "nprogress": "^0.2.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -56,6 +57,7 @@
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.8.7",
     "@types/nprogress": "^0.2.2",
+    "@types/prop-types": "^15.7.11",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
