--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-spring": "^9.7.3",
     "server-only": "^0.0.1",
     "socket.io-client": "^4.7.4",
     "swr": "^2.2.4",
