--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@formatjs/intl-localematcher": "^0.2.32",
     "@prisma/client": "^5.4.2",
     "antd": "^5.14.1",
+    "axios": "^1.6.8",
     "cross-env": "^7.0.3",
     "ethers": "^6.8.0",
     "express": "^4.18.2",
